--- a/index.html
+++ b/index.html
@@ -6,39 +6,39 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>QWERy</title>
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="q.ico" type="image/x-icon">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Open+Sans:wght@400;600;700&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<script src="https://cdn.polyfill.io/v2/polyfill.min.js"> </script>
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 	<header class="header">
-	<a href="/" class="logo">
-		<picture><source srcset="img/icons/logo.svg" type="image/webp"><img src="img/icons/logo.svg" alt=""></picture>
-	</a>
+		<a href="/" class="logo">
+			<picture>
+				<source srcset="img/icons/logo.svg" type="image/webp"><img src="img/icons/logo.svg" alt=""></picture>
+		</a>
 
-	<nav class="header-nav">
+		<nav class="header-nav">
 
-		<ul class="header-nav__list list-reset">
-			<li><a href="#" class="header-nav__link header-nav__link_active">Information</a></li>
-			<li><a href="#" class="header-nav__link">About&nbsp;us</a></li>
-			<li><a href="#" class="header-nav__link">Culture</a></li>
-		</ul>
-	</nav>
-	<label class="header-search" data-da=".header-nav,570,first">
-		<span class="header-search__icon icon_search"></span>
-		<input type="text" class="header-search__input" placeholder="Search">
-	</label>
-	<div class="icon-menu">
-		<span></span>
-		<span></span>
-		<span></span>
-	</div>
-</header>
+			<ul class="header-nav__list list-reset">
+				<li><a href="#" class="header-nav__link header-nav__link_active">Information</a></li>
+				<li><a href="#" class="header-nav__link">About&nbsp;us</a></li>
+				<li><a href="#" class="header-nav__link">Culture</a></li>
+			</ul>
+		</nav>
+		<label class="header-search" data-da=".header-nav,570,first">
+			<span class="header-search__icon icon_search"></span>
+			<input type="text" class="header-search__input" placeholder="Search">
+		</label>
+		<div class="icon-menu">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</header>
 
 	<main>
 		<section class="intro">
@@ -71,7 +71,10 @@
 		</section>
 		<section class="section">
 			<div class="_container section_container">
-				<div class="section__img "><picture><source srcset="img/section/1.webp" type="image/webp"><img src="img/section/1.jpg" alt=""></picture></div>
+				<div class="section__img ">
+					<picture>
+						<source srcset="img/section/1.webp" type="image/webp"><img src="img/section/1.jpg" alt=""></picture>
+				</div>
 
 				<div class="section-text ">
 					<div class="section-text__summary">EAST nUSA TENGGARA</div>
@@ -92,7 +95,8 @@
 				<div class="slider-section">
 					<div class="slider-section__slide slide _ibg">
 						<div class="slider-section__wrapper">
-							<picture><source srcset="img/slider/01.webp" type="image/webp"><img src="img/slider/01.jpg" class="slider-section__img"></picture></img>
+							<picture>
+								<source srcset="img/slider/01.webp" type="image/webp"><img src="img/slider/01.jpg" class="slider-section__img"></picture></img>
 							<div class="section-text ">
 								<div class="section-text__summary">Bromo</div>
 								<h2 class="section-text__title">Steady your steps, we will climb together!
@@ -111,7 +115,8 @@
 					</div>
 					<div class="slider-section__slide slide _ibg">
 						<div class="slider-section__wrapper">
-							<picture><source srcset="img/slider/01.webp" type="image/webp"><img src="img/slider/01.jpg" class="slider-section__img"></picture></img>
+							<picture>
+								<source srcset="img/slider/01.webp" type="image/webp"><img src="img/slider/01.jpg" class="slider-section__img"></picture></img>
 							<div class="section-text ">
 								<div class="section-text__summary">Bromo</div>
 								<h2 class="section-text__title">Steady your steps, we will climb together!
@@ -127,7 +132,8 @@
 					</div>
 					<div class="slider-section__slide slide _ibg">
 						<div class="slider-section__wrapper">
-							<picture><source srcset="img/slider/01.webp" type="image/webp"><img src="img/slider/01.jpg" class="slider-section__img"></picture></img>
+							<picture>
+								<source srcset="img/slider/01.webp" type="image/webp"><img src="img/slider/01.jpg" class="slider-section__img"></picture></img>
 							<div class="section-text ">
 								<div class="section-text__summary">Bromo</div>
 								<h2 class="section-text__title">Steady your steps, we will climb together!
@@ -147,7 +153,10 @@
 		</section>
 		<section class="section section_rev">
 			<div class="_container section_container">
-				<div class="section__img "><picture><source srcset="img/section/2.webp" type="image/webp"><img src="img/section/2.jpg" alt=""></picture></div>
+				<div class="section__img ">
+					<picture>
+						<source srcset="img/section/2.webp" type="image/webp"><img src="img/section/2.jpg" alt=""></picture>
+				</div>
 
 				<div class="section-text ">
 					<div class="section-text__summary">INDONESIAN CULTURE</div>
@@ -166,7 +175,8 @@
 			<div class="_container get-started_container">
 				<div class="get-started__left">
 					<a href="/" class="get-started__link">
-						<picture><source srcset="img/icons/logo.svg" type="image/webp"><img src="img/icons/logo.svg" alt="Logo"></picture>
+						<picture>
+							<source srcset="img/icons/logo.svg" type="image/webp"><img src="img/icons/logo.svg" alt="Logo"></picture>
 					</a>
 				</div>
 				<div class="get-started__right">
@@ -185,89 +195,88 @@
 		</style>
 <![endif]-->
 	<footer class="main-footer">
-	<div class="_container main-footer_container">
-		<div class="main-footer__row">
-			<div class="main-footer__email footer-email">
-				<h3 class="footer-email__title">Let's go on vacation, Make your day</h3>
-				<form action="" class="footer-email__form">
-					<input placeholder="Email address" type="text" class="footer-email__input"
-						pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-](?:\.[a-zA-Z0-9-]+)*$/">
-					<button type="button" class="footer-email__button btn-reset"></button>
-				</form>
+		<div class="_container main-footer_container">
+			<div class="main-footer__row">
+				<div class="main-footer__email footer-email">
+					<h3 class="footer-email__title">Let's go on vacation, Make your day</h3>
+					<form action="" class="footer-email__form">
+						<input placeholder="Email address" type="text" class="footer-email__input" pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-](?:\.[a-zA-Z0-9-]+)*$/">
+						<button type="button" class="footer-email__button btn-reset"></button>
+					</form>
 
+				</div>
+				<div class="main-footer__nav footer-nav">
+					<div class="footer-nav__block">
+						<ul class="footer-nav__list list-reset">
+							<li class="footer-nav__item">
+								<h3 class="footer-nav__title">Services</h3>
+							</li>
+
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Email Marketing</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Campaigns</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Branding</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Offline</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer-nav__block">
+						<ul class="footer-nav__list list-reset">
+							<li class="footer-nav__item">
+								<h3 class="footer-nav__title">About</h3>
+							</li>
+
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Our Story</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Benefits</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Team</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Careers</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer-nav__block">
+						<ul class="footer-nav__list list-reset">
+							<li class="footer-nav__item">
+								<h3 class="footer-nav__title">Help</h3>
+							</li>
+
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">FAQs</a>
+							</li>
+							<li class="footer-nav__item">
+								<a href="" class="footer-nav__link">Contact Us</a>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<div class="main-footer__nav footer-nav">
-				<div class="footer-nav__block">
-					<ul class="footer-nav__list list-reset">
-						<li class="footer-nav__item">
-							<h3 class="footer-nav__title">Services</h3>
-						</li>
-
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Email Marketing</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Campaigns</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Branding</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Offline</a>
-						</li>
-					</ul>
+			<div class="main-footer__row footer-bottom">
+				<div class="footer-bottom__item">
+					<a class="footer-bottom__text" href="#">Terms & Conditions</a>
+					<a class="footer-bottom__text" href="#">Privacy Policy</a>
 				</div>
-				<div class="footer-nav__block">
-					<ul class="footer-nav__list list-reset">
-						<li class="footer-nav__item">
-							<h3 class="footer-nav__title">About</h3>
-						</li>
-
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Our Story</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Benefits</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Team</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Careers</a>
-						</li>
-					</ul>
-				</div>
-				<div class="footer-nav__block">
-					<ul class="footer-nav__list list-reset">
-						<li class="footer-nav__item">
-							<h3 class="footer-nav__title">Help</h3>
-						</li>
-
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">FAQs</a>
-						</li>
-						<li class="footer-nav__item">
-							<a href="" class="footer-nav__link">Contact Us</a>
-						</li>
-					</ul>
+				<div class="footer-bottom__item social-footer">
+					<a href="#" class="icon_facebook social-footer__link"></a>
+					<a href="#" class="icon_twitter social-footer__link"></a>
+					<a href="#" class="icon_instagramm social-footer__link"></a>
 				</div>
 			</div>
 		</div>
-		<div class="main-footer__row footer-bottom">
-			<div class="footer-bottom__item">
-				<a class="footer-bottom__text" href="#">Terms & Conditions</a>
-				<a class="footer-bottom__text" href="#">Privacy Policy</a>
-			</div>
-			<div class="footer-bottom__item social-footer">
-				<a href="#" class="icon_facebook social-footer__link"></a>
-				<a href="#" class="icon_twitter social-footer__link"></a>
-				<a href="#" class="icon_instagramm social-footer__link"></a>
-			</div>
-		</div>
-	</div>
-</footer>
+	</footer>
 	<script src="js/vendors.js"></script>
-<script src="js/app.js"></script>
+	<script src="js/app.js"></script>
 
 </body>
 
